--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-art-template": "^1.0.1",
     "express-fileupload": "^1.1.4",
     "express-session": "^1.16.1",
+    "jq-paginator": "^2.0.2",
     "jquery": "^3.4.0",
     "mongoose": "^5.5.0",
     "npm": "^6.9.0"
